--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "2fa-dev",
   "scripts": {
     "dev": "hugo serve",
-    "build": "hugo --minify"
+    "build": "sh build.sh"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
